--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/skassa
 spring.datasource.username=skassa
 spring.datasource.password=skassa
 
+
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
@@ -15,4 +17,9 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.liquibase.change-log=classpath:/changelog-skassa.xml 
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+
+test-task.date-format=dd.MM.yyyy
+test-task.log-id=request_id
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
