add docker and compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,9 @@ server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/skassa
-spring.datasource.username=skassa
-spring.datasource.password=skassa
-
-
+#spring.datasource.url=jdbc:postgresql://192.168.1.5:5432/skassa
+#spring.datasource.username=skassa
+#spring.datasource.password=skassa
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
